[package]
name = "core_audio"
version = "0.1.0"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_audio_types = {path = "../core_audio_types" }
cc4 = "0.1.2"
block = "*"